--- a/swTH/bd.swth.entidades/bd.swth.entidades.csproj
+++ b/swTH/bd.swth.entidades/bd.swth.entidades.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="EntidadesServicios\" />
     <Folder Include="Utils\" />
   </ItemGroup>
 
