--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -39,5 +39,6 @@
     <ProjectReference Include="..\bd.swth.datos\bd.swth.datos.csproj" />
     <ProjectReference Include="..\bd.swth.entidades\bd.swth.entidades.csproj" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
