--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SwTHConnection": "Server=.;Database=PruebaBDE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=.;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
