--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <None Remove="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Remove="Properties\PublishProfiles\CustomProfile2.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="bd.log.guardar" Version="1.0.0" />
