Se realizó los metodos para listar Capacitaciones, ComportamientosObservables, ConocimientosAdicionales no asignaodos a un Indice Ocupacional

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SwTHConnection": "Server=DESKTOP-95R0B9N\\MSSQLSERVER1;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=.;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
