--- a/swTH/bd.swth.datos/bd.swth.datos.csproj
+++ b/swTH/bd.swth.datos/bd.swth.datos.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\bd.swth.entidades\bd.swth.entidades.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
