--- a/swTH/bd.swth.entidades/bd.swth.entidades.csproj
+++ b/swTH/bd.swth.entidades/bd.swth.entidades.csproj
@@ -9,4 +9,9 @@
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
+  </ItemGroup>
+
 </Project>
