--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SwTHConnection": "Server=DESKTOP-95R0B9N\\MSSQLSERVER1;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
