--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "SwTHConnection": "Server=.;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User id=digital;Password=digital201708;MultipleActiveResultSets=true"
+    //"SwTHConnection": "Server=.;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
