--- a/swTH/bd.swcompartidos.servicios.externos/bd.sw.externos.csproj
+++ b/swTH/bd.swcompartidos.servicios.externos/bd.sw.externos.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bd.log.guardar" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
