Se cambia las relaciones de tipopermiso y solicitud permiso y se agrega campo de fechaaprobado en solicitudPermiso

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
-  //  "SwTHConnection": "Server=DESKTOP-5P3HE06\\SQLEXPRESS;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde"
+    //  "SwTHConnection": "Server=DESKTOP-5P3HE06\\SQLEXPRESS;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "Logging": {
