--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -36,6 +36,7 @@
     <Folder Include="Controllers\MVC\" />
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\Documentos\" />
+    <Folder Include="wwwroot\Noticias\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\bd.swcompartidos.servicios.externos\bd.sw.externos.csproj" />
