--- a/swTH/bd.swth.servicios/bd.swth.servicios.csproj
+++ b/swTH/bd.swth.servicios/bd.swth.servicios.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="bd.log.guardar" Version="1.0.8" />
+    <PackageReference Include="EnviarCorreo" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
   </ItemGroup>
