Se agregó funcionalidad para mostrar dependencias en arbol, se teminó funcionalidad para agregar a distributivo empleado y otras correciones.

--- a/swTH/bd.swcompartidos.servicios.externos/bd.sw.externos.csproj
+++ b/swTH/bd.swcompartidos.servicios.externos/bd.sw.externos.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="bd.log.guardar" Version="1.0.8" />
+    <PackageReference Include="morelinq" Version="2.10.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
