--- a/swTH/bd.swth.datos/bd.swth.datos.csproj
+++ b/swTH/bd.swth.datos/bd.swth.datos.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="bd.log.guardar" Version="1.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
+    <PackageReference Include="morelinq" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
