--- a/swTH/bd.swth.entidades/bd.swth.entidades.csproj
+++ b/swTH/bd.swth.entidades/bd.swth.entidades.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="EnviarCorreo" Version="1.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
+    <PackageReference Include="morelinq" Version="2.10.0" />
   </ItemGroup>
 
 </Project>
