--- a/swTH/bd.swth.servicios/bd.swth.servicios.csproj
+++ b/swTH/bd.swth.servicios/bd.swth.servicios.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="EnviarCorreo" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+    <PackageReference Include="morelinq" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
