--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,10 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    //"SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
-    //"SwTHConnection": "Server=.;Database=ds.zeus.db;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde"
-
- 
+    "SwTHConnection": "Server=.;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
