Se agrega funcionalidad de ingresar empleado

--- a/swTH/bd.swth.datos/bd.swth.datos.csproj
+++ b/swTH/bd.swth.datos/bd.swth.datos.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NuevoModels\**" />
+    <EmbeddedResource Remove="NuevoModels\**" />
+    <None Remove="NuevoModels\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="bd.log.guardar" Version="1.0.8" />
     <PackageReference Include="EnviarCorreo" Version="1.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
