--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SwTHConnection": "Server=.;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
