Se agregó la clase ejemplo con controlador Api

--- a/swTH/bd.swth.entidades/bd.swth.entidades.csproj
+++ b/swTH/bd.swth.entidades/bd.swth.entidades.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModels\Ejemplo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="EntidadesServicios\" />
   </ItemGroup>
 
