Se quita la clase ejemplo con su controller api

--- a/swTH/bd.swth.entidades/bd.swth.entidades.csproj
+++ b/swTH/bd.swth.entidades/bd.swth.entidades.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Negocio\Ejemplo.cs" />
     <Compile Remove="ViewModels\Ejemplo.cs" />
   </ItemGroup>
 
