--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -16,3 +16,6 @@
 
 
 }
+
+
+Scaffold-DbContext "Server=developmentds.eastus.cloudapp.azure.com;Database=Ejemplo;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models
