--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -12,7 +12,8 @@
     }
   },
 
-  "PartidaVacante": "Vacante - Vacante"
+  "PartidaVacante": "Vacante - Vacante",
+  "PartidaOcupada": "Ocupada"
 
 
 }
