--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -18,9 +18,11 @@
   "Smtp": "smtp.gmail.com",
   "PrimaryPort": "465",
   "SecureSocketOptions": "2",
-
+  /*
   "CorreoTTHH": "nestorvalle880416@gmail.com",
   "PasswordCorreo": "nvr1604**"
+  */
 
-
+  "CorreoTTHH": "alexsalazar2153@gmail.com",
+  "PasswordCorreo": "minamiKAZE"
 }
