se crean constantes para estados inactivo y activo al enviar correo en activaciones personal talento humano

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -13,16 +13,18 @@
   },
 
   "PartidaVacante": "Vacante - Vacante",
+  
 
   //Configuración de correo
   "Smtp": "smtp.gmail.com",
   "PrimaryPort": "465",
   "SecureSocketOptions": "2",
-  /*
-  "CorreoTTHH": "nestorvalle880416@gmail.com",
-  "PasswordCorreo": "nvr1604**"
-  */
 
-  "CorreoTTHH": "alexsalazar2153@gmail.com",
-  "PasswordCorreo": "minamiKAZE"
+  "CorreoTTHH": "nestorvalle880416@gmail.com",
+  "PasswordCorreo": "nvr1604**",
+
+  // Estado documento Activacion Personal
+  "ActivacionPersonalValorActivado": "1",
+  "ActivacionPersonalValorDesactivado": "0"
+
 }
