--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -20,7 +20,14 @@
   "SecureSocketOptions": "2",
 
   "CorreoTTHH": "nestorvalle880416@gmail.com",
-  "PasswordCorreo": "nvr1604**"
+  "PasswordCorreo": "nvr1604**",
 
 
+
+  //Configuración Estados FAO
+  "Asignado": "-1",
+  "RealizadoEmpleado": "0",
+  "RealizadoJefe": "1",
+  "RealizadoEspecialistaTH": "2",
+  "RealizadoJefeTH": "3"
 }
