Cambio, sin cambio y historicos FAO

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -25,7 +25,7 @@
 
   // Estado documento Activacion Personal
   "ActivacionPersonalValorActivado": "1",
-  "ActivacionPersonalValorDesactivado": "0"
+  "ActivacionPersonalValorDesactivado": "0",
 
 
   //Configuración Estados FAO
