--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -30,7 +30,7 @@
 
   // ConfiguraciónGrupoOcupacional
   "GrupoOcupacionalNivelSuperior": "NIVEL JERARQUICO SUPERIOR",
-  "GrupoOcupacionalNivelOperativo": "NIVEL OPERATIVO"
+  "GrupoOcupacionalNivelOperativo": "NIVEL OPERATIVO",
 
 
   //Configuración Estados FAO
