Proceso de peticion de personal validado (falta crear vista general para tthh)

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -20,9 +20,13 @@
   "Smtp": "smtp.gmail.com",
   "PrimaryPort": "465",
   "SecureSocketOptions": "2",
-
+  /*
   "CorreoTTHH": "nestorvalle880416@gmail.com",
   "PasswordCorreo": "nvr1604**",
+  */
+
+  "CorreoTTHH": "alexsalazar2153@gmail.com",
+  "PasswordCorreo": "minamiKAZE",
 
   // Estado documento Activacion Personal
   "ActivacionPersonalValorActivado": "1",
