--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1" />
     <PackageReference Include="morelinq" Version="2.10.0" />
     <PackageReference Include="SendMailSMTPNet.Core" Version="1.2.4" />
+    <PackageReference Include="TimePeriodLibrary.NET" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
