Creado proceso de Induccion

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -52,10 +52,15 @@
   "GrupoOcupacionalNivelOperativo": "NIVEL OPERATIVO",
 
 
-  //Configuración Estados FAO
+  // Configuración Estados FAO
   "Asignado": "-1",
   "RealizadoEmpleado": "0",
   "RealizadoJefe": "1",
   "RealizadoEspecialistaTH": "2",
-  "RealizadoJefeTH": "3"
+  "RealizadoJefeTH": "3",
+
+  // Configuración Constantes Estado Inducción
+  "InduccionFinalizada": "Completo",
+  "InduccionNoFinalizada": "Pendiente"
+
 }
