Creado Proceso de plan de acción (Funcional)

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -61,6 +61,9 @@
 
   // Configuración Constantes Estado Inducción
   "InduccionFinalizada": "Completo",
-  "InduccionNoFinalizada": "Pendiente"
+  "InduccionNoFinalizada": "Pendiente",
+
+  //Configuracion Estados Actividades Gestión Cambio (Los parámetros aceptados son: Nombre y Valor)
+  "ListaEstadosGestionCambio": "[{'Nombre': 'Iniciado', 'Valor': 0}, {'Nombre': 'Proceso', 'Valor': 1}, {'Nombre': 'Terminado', 'Valor': 2},{'Nombre': 'Culminado', 'Valor': 3},{'Nombre': 'Cancelado', 'Valor': 4}]"
 
 }
