Agregado proceso Movimiento personal tthh (falta editar)

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -65,6 +65,11 @@
   "InduccionNoFinalizada": "Pendiente",
 
   //Configuracion Estados Actividades Gestión Cambio (Los parámetros aceptados son: Nombre y Valor)
-  "ListaEstadosGestionCambio": "[{'Nombre': 'Iniciado', 'Valor': 0}, {'Nombre': 'Proceso', 'Valor': 1}, {'Nombre': 'Terminado', 'Valor': 2},{'Nombre': 'Culminado', 'Valor': 3},{'Nombre': 'Cancelado', 'Valor': 4}]"
+  "ListaEstadosGestionCambio": "[{'Nombre': 'Iniciado', 'Valor': 0}, {'Nombre': 'Proceso', 'Valor': 1}, {'Nombre': 'Terminado', 'Valor': 2},{'Nombre': 'Culminado', 'Valor': 3},{'Nombre': 'Cancelado', 'Valor': 4}]",
+
+
+  //Configuracion Estados Aprobación Movimiento Interno (GrupoAprovacion 0-1 [0: Director, 1:TTHH])
+  "ListaEstadosAprobacionMovimientoInterno": "[{'NombreEstado': 'Pendiente', 'ValorEstado': 0, 'GrupoAprobacion': 0}, {'NombreEstado': 'Aprobado', 'ValorEstado': 1, 'GrupoAprobacion': 0},{'NombreEstado': 'Cancelado', 'ValorEstado': 2, 'GrupoAprobacion': 0}, {'NombreEstado': 'Pendiente', 'ValorEstado': 3, 'GrupoAprobacion': 1}, {'NombreEstado': 'Aprobado', 'ValorEstado': 4, 'GrupoAprobacion': 1},{'NombreEstado': 'Cancelado', 'ValorEstado': 5, 'GrupoAprobacion': 1}]"
+
 
 }
