Arreglados valores de constante creada: ListaEstadosAprobacionMovimientoInterno

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -70,7 +70,7 @@
 
 
   //Configuracion Estados Aprobación Movimiento Interno (GrupoAprovacion 0-1 [0: Director, 1:TTHH])
-  "ListaEstadosAprobacionMovimientoInterno": "[{'NombreEstado': 'Pendiente', 'ValorEstado': 0, 'GrupoAprobacion': 0}, {'NombreEstado': 'Aprobado', 'ValorEstado': 1, 'GrupoAprobacion': 0},{'NombreEstado': 'Cancelado', 'ValorEstado': 2, 'GrupoAprobacion': 0}, {'NombreEstado': 'Pendiente', 'ValorEstado': 3, 'GrupoAprobacion': 1}, {'NombreEstado': 'Aprobado', 'ValorEstado': 4, 'GrupoAprobacion': 1},{'NombreEstado': 'Cancelado', 'ValorEstado': 5, 'GrupoAprobacion': 1}]"
+  "ListaEstadosAprobacionMovimientoInterno": "[{'NombreEstado': 'Pendiente', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Cancelado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Negado', 'ValorEstado': 4, 'GrupoAprobacion': 0}, {'NombreEstado': 'Aprobado', 'ValorEstado': 5, 'GrupoAprobacion': 0}]"
 
 
 }
