CReacion de Cnstantes Evaluacion y Servio de Calculos de evaluacion , ingreso de observaciones ,conocimientos

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -5,7 +5,7 @@
     //"SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogsin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde",
     "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
     //"swthconnection": "server=52.224.8.198;database=zeusbde;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
-    
+
   },
   "Logging": {
     "IncludeScopes": false,
@@ -60,6 +60,24 @@
   "RealizadoJefe": "1",
   "RealizadoEspecialistaTH": "2",
   "RealizadoJefeTH": "3",
+
+
+  // Configuración EvaluacionEmpleado
+  "Sobresaliente": "Sobresaliente",
+  "MuyBueno": "Muy Bueno",
+  "Bueno": "Bueno",
+  "Regular": "Regular",
+  "Insuficiente": "Insuficiente",
+  "AltamenteDesarrollada": "Altamente Desarrollada",
+  "Desarrollada": "Desarrollada",
+  "MedianamenteDesarrollada": "Medianamente Desarrollada",
+  "PocoDesarrollada": "Poco Desarrollada",
+  "NoDesarrollada": "NoDesarrollada",
+  "Siempre": "Altamente Desarrollada",
+  "Frecuentemente": "Desarrollada",
+  "Algunavez": "Medianamente Desarrollada",
+  "Raravez": "Poco Desarrollada",
+  "Nunca": "NoDesarrollada",
 
   // Configuración Constantes Estado Inducción
   "InduccionFinalizada": "Completo",
