Cambios Finales de Evaluacion Empleado

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -3,7 +3,8 @@
     //"SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
     //"SwTHConnection": "Server=.;Database=zeusbde;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogsin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde",
-    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true",
+    
     //"swthconnection": "server=52.224.8.198;database=zeusbde;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
 
   },
@@ -73,11 +74,14 @@
   "MedianamenteDesarrollada": "Medianamente Desarrollada",
   "PocoDesarrollada": "Poco Desarrollada",
   "NoDesarrollada": "NoDesarrollada",
-  "Siempre": "Altamente Desarrollada",
-  "Frecuentemente": "Desarrollada",
-  "Algunavez": "Medianamente Desarrollada",
-  "Raravez": "Poco Desarrollada",
-  "Nunca": "NoDesarrollada",
+  "Siempre": "Siempre",
+  "Frecuentemente": "Frecuentemente",
+  "Algunavez": "Alguna vez",
+  "Raravez": "Rara vez",
+  "Nunca": "Nunca",
+  "TrabajoEnEquipo": "Trabajo En Equipo",
+  "Iniciativa": "Iniciativa",
+  "Liderazgo": "Liderazgo",
 
   // Configuración Constantes Estado Inducción
   "InduccionFinalizada": "Completo",
