VIaticos Empleado y Jefe

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -4,8 +4,7 @@
     //"SwTHConnection": "Server=.;Database=zeusbde;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogsin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde",
     "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true",
-    
-    //"swthconnection": "server=52.224.8.198;database=zeusbde;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
+    //"Swthconnection": "server=52.224.8.198;database=zeusbde;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
 
   },
   "Logging": {
@@ -73,7 +72,7 @@
   "Desarrollada": "Desarrollada",
   "MedianamenteDesarrollada": "Medianamente Desarrollada",
   "PocoDesarrollada": "Poco Desarrollada",
-  "NoDesarrollada": "NoDesarrollada",
+  "NoDesarrollada": "No Desarrollada",
   "Siempre": "Siempre",
   "Frecuentemente": "Frecuentemente",
   "Algunavez": "Alguna vez",
