Informe Viaticos ok

--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -45,6 +45,7 @@
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\Documentos\" />
     <Folder Include="wwwroot\ExamenesComplementariosDocumentos\" />
+    <Folder Include="wwwroot\FacturaViaticos\" />
     <Folder Include="wwwroot\Noticias\" />
   </ItemGroup>
   <ItemGroup>
