--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -3,7 +3,7 @@
     //"SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
     //"SwTHConnection": "Server=.;Database=zeusbde;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogsin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde",
-    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true",
+    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
     //"Swthconnection": "server=52.224.8.198;database=zeusbde;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
 
   },
@@ -90,8 +90,9 @@
   "ListaEstadosGestionCambio": "[{'Nombre': 'Iniciado', 'Valor': 0}, {'Nombre': 'Proceso', 'Valor': 1}, {'Nombre': 'Terminado', 'Valor': 2},{'Nombre': 'Culminado', 'Valor': 3},{'Nombre': 'Cancelado', 'Valor': 4}]",
 
 
-  //Configuracion Estados Aprobación Movimiento Interno (GrupoAprovacion 0-1 [0: Director, 1:TTHH])
-  "ListaEstadosAprobacionMovimientoInterno": "[{'NombreEstado': 'Pendiente', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Cancelado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Negado', 'ValorEstado': 4, 'GrupoAprobacion': 0}, {'NombreEstado': 'Aprobado', 'ValorEstado': 5, 'GrupoAprobacion': 0}]"
+  //Configuracion Estados Aprobación Movimiento Interno (GrupoAprovacion 0-1-2 [0: Director, 1:TTHH, 2:Empleado])
+  //** NO MODIFICAR LOS VALORES, PERMITIDO: AGREGAR NUEVOS VALORES, El ValorEstado NO DEBE REPETIRSE **
+  "ListaEstadosAprobacionMovimientoInterno": "[{'NombreEstado': 'Pendiente', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Cancelado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Negado', 'ValorEstado': 4, 'GrupoAprobacion': 0}, {'NombreEstado': 'Aprobado', 'ValorEstado': 5, 'GrupoAprobacion': 0},{'NombreEstado': 'Pendiente', 'ValorEstado':6, 'GrupoAprobacion': 2}]"
 
 
 }
