Agregado un temporizador que se ejecuta cada hora, agregado el método que permite actualizar los días restantes al timer

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -17,6 +17,12 @@
   "PartidaVacante": "Vacante - Vacante",
   "PartidaOcupada": "Ocupada",
 
+  "IntervaloTemporizadorHoras": 1,
+  "IntervaloTemporizadorMinutos": 0,
+  "IntervaloTemporizadorSegundos": 0,
+  "inicioCicloHoras": 0,
+  "inicioCicloMinutos": 0,
+  "inicioCicloSegundos": 0,
 
   // --- Configuración de correo --------
   "Smtp": "smtp.gmail.com",
@@ -27,8 +33,8 @@
   "PasswordCorreo": "nvr1604**",
   */
 
-  "CorreoTTHH": "alexsalazar2153@gmail.com",
-  "PasswordCorreo": "minamiKAZE",
+  "CorreoTTHH": "",
+  "PasswordCorreo": "",
 
   "NameFrom": "Talento humano",
   "Subject": "La plataforma de activación de requerimientos de personal se encuentra activa",
