--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Folder Include="Controllers\MVC\" />
     <Folder Include="Properties\PublishProfiles\" />
+    <Folder Include="Temporizador\" />
     <Folder Include="wwwroot\Documentos\" />
     <Folder Include="wwwroot\ExamenesComplementariosDocumentos\" />
     <Folder Include="wwwroot\FacturaViaticos\" />
