--- a/swTH/bd.swth.servicios/bd.swth.servicios.csproj
+++ b/swTH/bd.swth.servicios/bd.swth.servicios.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\bd.swth.datos\bd.swth.datos.csproj" />
     <ProjectReference Include="..\bd.swth.entidades\bd.swth.entidades.csproj" />
   </ItemGroup>
 
