Arreglado crud AprobacionSolicitudVacaciones

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -102,6 +102,6 @@
 
   //Configuracion Estados Vacaciones (GrupoAprovacion 0-1-2 [0: Sistema, 1:Aprobador, 2:Empleado])
   //** NO MODIFICAR LOS VALORES, PERMITIDO: AGREGAR NUEVOS VALORES, El ValorEstado NO DEBE REPETIRSE **
-  "ListaEstadosVacaciones": "[{'NombreEstado': 'Cancelado', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Anulado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Pendiente', 'ValorEstado': 3, 'GrupoAprobacion': 2}, {'NombreEstado': 'Vigente', 'ValorEstado': 4, 'GrupoAprobacion': 0},{'NombreEstado': 'No vigente', 'ValorEstado':5, 'GrupoAprobacion': 0},{'NombreEstado': 'Aprobado', 'ValorEstado': 6, 'GrupoAprobacion': 1}]"
+  "ListaEstadosVacaciones": "[{'NombreEstado': 'Negado', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Anulado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Pendiente', 'ValorEstado': 3, 'GrupoAprobacion': 2}, {'NombreEstado': 'Vigente', 'ValorEstado': 4, 'GrupoAprobacion': 0},{'NombreEstado': 'No vigente', 'ValorEstado':5, 'GrupoAprobacion': 0},{'NombreEstado': 'Aprobado', 'ValorEstado': 6, 'GrupoAprobacion': 1}]"
 
 }
