Evaluacion de Capacitacionesy envio de correo, Constantes de Estado de capacitacion

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -39,6 +39,7 @@
   "NameFrom": "Talento humano",
   "Subject": "La plataforma de activación de requerimientos de personal se encuentra activa",
 
+
   "MensajeCorreoSuperior": "Sr.(a) \n \n",
 
   /* "false" para no visualizar la dependencia | "true" para visualizarla */
@@ -50,6 +51,12 @@
 
   //---- fin Configuración de correo------
 
+  //correo de calificacion de capacitacion
+  "SubjectCapacitaciones": "La Evaluación de Capacitación se encuentra activado",
+  "CorreoCabecera": "\n Presente.- \n \n Se encuentra activado el proceso de evaluacion de capacitacion, ingresar a través del siguiente enlace:\n",
+  "CorreoEnlace": "http://52.224.8.198:82/TALENTOHUMANO/EvaluacionCapacitacion/Index",
+  "CorreoPie": "\n \n O ingrese al portal empleado, en Planificación Anual.\n \n Gracias \n Talento humano",
+  // fin calificacion capacitacion
 
   // Estado documento Activacion Personal
   "ActivacionPersonalValorActivado": "1",
@@ -66,6 +73,13 @@
   "RealizadoJefe": "1",
   "RealizadoEspecialistaTH": "2",
   "RealizadoJefeTH": "3",
+
+
+  // Configuración Capacitacion
+  "Ingresado": "1",
+  "Finalizado": "2",
+  "Calificado": "3",
+  "Desactivado": "0",
 
 
   // Configuración EvaluacionEmpleado
