--- a/swTH/bd.swth.web/bd.swth.web.csproj
+++ b/swTH/bd.swth.web/bd.swth.web.csproj
@@ -54,6 +54,6 @@
     <ProjectReference Include="..\bd.swth.entidades\bd.swth.entidades.csproj" />
     <ProjectReference Include="..\bd.swth.servicios\bd.swth.servicios.csproj" />
   </ItemGroup>
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="http://json.schemastore.org/apple-app-site-association" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" appsettings_1Development_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
