Cambios Tabajo en equipo

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -98,9 +98,9 @@
   "Algunavez": "Alguna vez",
   "Raravez": "Rara vez",
   "Nunca": "Nunca",
-  "TrabajoEnEquipo": "Trabajo En Equipo",
-  "Iniciativa": "Iniciativa",
-  "Liderazgo": "Liderazgo",
+  "TrabajoEnEquipo": "TRABAJO EN EQUIPO",
+  "Iniciativa": "INICIATIVA",
+  "Liderazgo": "LIDERAZGO",
 
   // Configuración Constantes Estado Inducción
   "InduccionFinalizada": "Completo",
