Cambios de Viaticos

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -102,6 +102,13 @@
   "Iniciativa": "INICIATIVA",
   "Liderazgo": "LIDERAZGO",
 
+
+
+  //valores viativos
+  "Operativo": 80,
+  "Jefe": 130,
+
+
   // Configuración Constantes Estado Inducción
   "InduccionFinalizada": "Completo",
   "InduccionNoFinalizada": "Pendiente",
