ultimos cambios realizados despues de la modificacion de la tabla IndiceOcupacionalModalidadPartida, (Funcionando IndiceOcupacional proceso), arreglando asignar distributivo

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -3,7 +3,7 @@
     //"SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
     //"SwTHConnection": "Server=.;Database=zeusbde;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogsin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde",
-    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusbde;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
+    "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusUnir;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
     //"Swthconnection": "server=52.224.8.198;database=zeusUnir;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
 
   },
@@ -126,6 +126,11 @@
 
   //Configuracion Estados Vacaciones (GrupoAprovacion 0-1-2 [0: Sistema, 1:Aprobador, 2:Empleado])
   //** NO MODIFICAR LOS VALORES, PERMITIDO: AGREGAR NUEVOS VALORES, El ValorEstado NO DEBE REPETIRSE **
-  "ListaEstadosVacaciones": "[{'NombreEstado': 'Negado', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Anulado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Pendiente', 'ValorEstado': 3, 'GrupoAprobacion': 2}, {'NombreEstado': 'Vigente', 'ValorEstado': 4, 'GrupoAprobacion': 0},{'NombreEstado': 'No vigente', 'ValorEstado':5, 'GrupoAprobacion': 0},{'NombreEstado': 'Aprobado', 'ValorEstado': 6, 'GrupoAprobacion': 1}]"
+  "ListaEstadosVacaciones": "[{'NombreEstado': 'Negado', 'ValorEstado': 1, 'GrupoAprobacion': 1},{'NombreEstado': 'Anulado', 'ValorEstado': 2, 'GrupoAprobacion': 1}, {'NombreEstado': 'Pendiente', 'ValorEstado': 3, 'GrupoAprobacion': 2}, {'NombreEstado': 'Vigente', 'ValorEstado': 4, 'GrupoAprobacion': 0},{'NombreEstado': 'No vigente', 'ValorEstado':5, 'GrupoAprobacion': 0},{'NombreEstado': 'Aprobado', 'ValorEstado': 6, 'GrupoAprobacion': 1}]",
+
+
+  "Contrato": "contrato",
+  "Nombramiento": "nombramiento"
+
 
 }
