activaciones personal tthh correcciones

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -29,17 +29,13 @@
   // --- Configuración de correo --------
 
   //hotmail:smtp.live.com //  gmail: smtp.gmail.com
-  "Smtp": "smtp.live.com",
+  "Smtp": "smtp.gmail.com",
 
   "PrimaryPort": "465",
   "SecureSocketOptions": "2",
-  /*
-  "CorreoTTHH": "nestorvalle880416@gmail.com",
-  "PasswordCorreo": "nvr1604**",
-  */
 
-  "CorreoTTHH": "",
-  "PasswordCorreo": "",
+  "CorreoTTHH": "0bancods2018@gmail.com",
+  "PasswordCorreo": "mail2018",
 
   "NameFrom": "Talento humano",
   "Subject": "La plataforma de activación de requerimientos de personal se encuentra activa",
