agregados encargos y subrogaciones procesos a movimientos de personal (revisados y corregidos algunos bugs) FALTA PARA SUBROGACIONES Y ENCARGOS LAS ACTIVACIONES PERSONAL TTHH

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -140,5 +140,10 @@
   "TipoEvento": "TIPOEVENTO",
   "TipoEvaluacion": "TIPOEVALUACION",
 
-  "NombreDesconcentrados": "DESCONCENTRADOS"
+  "NombreDesconcentrados": "DESCONCENTRADOS",
+
+  "TerminacionEncargo": "Terminación de encargo",
+  "TerminacionSubrogacion": "Terminación subrogación",
+  "Encargo": "Encargo de funciones",
+  "Subrogacion": "Subrogación"
 }
