se cambia patrimonioPersonal(se agrega histórico) se arregla aprobaciones para solicitudes permisos, se arreglan varios métodos de empleado, trayectorias laborales y otros

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -6,7 +6,7 @@
     //"SwTHConnection": "Server=52.224.8.198;Database=zeusUnir;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
     "SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusUnir;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
     //"Swthconnection": "server=52.224.8.198;database=zeusbde;user id=sa;password=Digital_2018;multipleactiveresultsets=true"
-
+   // "Swthconnection": "server=UIOWTFUNDATION;database=zeusbde;user id=usr_pt_001;password=usr_pt_0011;multipleactiveresultsets=true"
   },
   "Logging": {
     "IncludeScopes": false,
