culminado perovisiones(fondo reserva y décimos) Brigada SSO

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -19,6 +19,21 @@
   "PartidaOcupada": "OCUPADA",
   "PartidaSuprimida": "SUPRESIÓN",
 
+
+
+  "DiasMinimoDerechoFondoReserva": 2,
+  "IntervaloTemporizadorHorasFondoReserva": 0,
+  "IntervaloTemporizadorMinutosFondoReserva": 2,
+  "IntervaloTemporizadorSegundosFondoReserva": 0,
+  "inicioCicloHorasFondoReserva": 0,
+  "inicioCicloMinutosFondoReserva": 0,
+  "inicioCicloSegundosFondoReserva": 0,
+
+
+
+
+
+
   "IntervaloTemporizadorHoras": 12,
   "IntervaloTemporizadorMinutos": 0,
   "IntervaloTemporizadorSegundos": 0,
