SE realizan correciones al contexto para que pueda interactuar con la nueva base de datos, se realiza depuración de procesos y se solventa errores en: INDUCCION, DOCUMENTOS INGRESO, Y ACCIONES PERSONAL

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     //"SwTHConnection": "Server=192.168.100.21;Database=ds.zeus.db;User Id=digital; Password=digital201708;MultipleActiveResultSets=true"
-    //"SwTHConnection": "Server=.;Database=zeusbde;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"SwTHConnection": "Server=.;Database=zeusUnirNuevoSistema;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"SwTHConnection": "workstation id=zeusbde.mssql.somee.com;packet size=4096;user id=zeusbde_SQLLogsin_1;pwd=g4x4zfepq6;data source=zeusbde.mssql.somee.com;persist security info=False;initial catalog=zeusbde",
     "SwTHConnection": "Server=52.224.8.198;Database=zeusUnirNuevoSistema;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
     //"SwTHConnection": "Server=developmentds.eastus.cloudapp.azure.com;Database=zeusUnir;User Id=sa;password=Digital_2018;MultipleActiveResultSets=true"
@@ -165,5 +165,19 @@
   "Encargo": "Encargo de funciones",
   "Subrogacion": "Subrogación",
 
-  "NombreNivelJerarquicoSuperior": "NIVEL JERARQUICO SUPERIOR"
+  "NombreNivelJerarquicoSuperior": "NIVEL JERARQUICO SUPERIOR",
+
+  // estados acción de personal
+  // Los valores de estados no deben repetirse
+  "EstadoRegistrarValor": "0",
+  "EstadoRegistrarNombre": "Registrado",
+
+  "EstadoEjecutarValor": "1",
+  "EstadoEjecutarNombre": "Procesado",
+
+  "EstadoCancelarValor": "2",
+  "EstadoCancelarNombre": "Cancelado",
+
+  "EstadoDeshacerValor": "3",
+  "EstadoDeshacerNombre": "Deshecho - cancelado"
 }
