Se realizan correciones en FichasMédicas y situación propuesta

--- a/swTH/bd.swth.web/appsettings.json
+++ b/swTH/bd.swth.web/appsettings.json
@@ -52,9 +52,9 @@
   "EmailFrom": "notificaciones.sathyrm@bde.fin.ec",
   "NameFrom": "Talento humano",
 
-  "CorreoTTHH": "",
-  "UsuarioCorreo": "nestorvalle880416@gmail.com",
-  "PasswordCorreo": "",
+  "CorreoTTHH": "tthh@tthh.com",
+  "UsuarioCorreo": "alexsalazar2153@gmail.com",
+  "PasswordCorreo": "Session45",
   "RequireAuthentication": "true",
   "Subject": "La plataforma de activación de requerimientos de personal se encuentra activa",
 
